--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,8 @@
             "App\\": "src"
         }
     },
-    "require": {}
+    "require": {
+        "symfony/var-dumper": "^6.3",
+        "league/csv": "^9.11"
+    }
 }
